--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
     <section id="faqs" class="contenedorAcordeon">
       <h1>General Questions</h1>
       <p>All you need to know about Food Delivery and our services.</p>
-      <div class="contenedorCaja">
+      <div class="contenedorCaja wow animate__animated animate__bounceIn">
         <div class="acordeon_titulo ancho">
           <h3>What if something is wrong with my order?</h3>
           <div class="vermas">
@@ -323,7 +323,7 @@
           </p>
         </div>
       </div>
-      <div class="contenedorCaja">
+      <div class="contenedorCaja wow animate__animated animate__bounceIn">
         <div class="acordeon_titulo ancho">
           <h3>What if my order is late?</h3>
           <div class="vermas">
@@ -341,7 +341,7 @@
           </p>
         </div>
       </div>
-      <div class="contenedorCaja">
+      <div class="contenedorCaja wow animate__animated animate__bounceIn">
         <div class="acordeon_titulo ancho">
           <h3>Can I track my order?</h3>
           <div class="vermas">
@@ -359,7 +359,7 @@
           </p>
         </div>
       </div>
-      <div class="contenedorCaja">
+      <div class="contenedorCaja wow animate__animated animate__bounceIn">
         <div class="acordeon_titulo ancho">
           <h3>Can I get a refund?</h3>
           <div class="vermas">
@@ -483,7 +483,7 @@
                   required
                 />
               </div>
-              <div>
+              <div class="btnduo">
                 <button class="btn1" onclick="validateForm()">
                   Send message
                 </button>
